--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "parjs": "^1.3.9",
     "zod": "^3.22.4"
   },
   "devDependencies": {
